--- a/Contacto.html
+++ b/Contacto.html
@@ -3,7 +3,7 @@
 <head>
     <title>TVG</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/Users/ceciliatheule/Desktop/DESARROLLOWEB/CSS/styles.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
     <meta name="description" content="the viiking gang presents its cv with its best pictures">
     <meta name="author" content="The viking gang"
 </head>
