--- a/Home.html
+++ b/Home.html
@@ -3,10 +3,11 @@
 <head>
     <title>TVG</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/Users/ceciliatheule/Desktop/DESARROLLOWEB/CSS/styles.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
     <link rel="icon" type="image/x-icon" href="fav.png">
     <meta name="description" content="the viiking gang presents its cv with its best pictures">
-    <meta name="author" content="The viking gang"
+    <meta name="author" content="The viking gang">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
