--- a/Contacto.html
+++ b/Contacto.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
     <meta name="description" content="the viiking gang presents its cv with its best pictures">
-    <meta name="author" content="The viking gang"
+    <meta name="author" content="The viking gang">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
