--- a/Contacto.html
+++ b/Contacto.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Imágenes.html">Imágenes</a></li>
                 <li><a href="Contacto.html">Consulta</a></li>
             </ul>
