--- a/Contacto.html
+++ b/Contacto.html
@@ -31,7 +31,7 @@
     </p>
     <form action="/action.php" method="post">
         Nombre: <input name="Nombre completo" type="text" /> <br /> 
-        Celular contacto: <input max="99" min="11" name="celular" type="number" value="10" /> <br />
+        Celular contacto: <input max="99" min="11" name="celular" type="number" />  <br />
         <select name="país">
         <option selected="selected" value="argentina">Argentina</option>
         <option value="otros paises">Otros paises</option>
