--- a/Contacto.html
+++ b/Contacto.html
@@ -30,7 +30,7 @@
         Para que yo pueda evaluar el trabajo que solicita, te pido que completes el siguiente formulario.  
     </p>
     <form action="/action.php" method="post">
-        Nombre: <input name="Nombre completo" type="text" /> <br /> 
+        Nombre: <input name="Nombre completo" type="text" class="form-input" />  <br /> 
         Celular contacto: <input max="99" min="11" name="celular" type="number" />  <br />
         <select name="país">
         <option selected="selected" value="argentina">Argentina</option>
