--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="the viiking gang presents its cv with its best pictures">
     <meta name="author" content="The viking gang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="JS/nombre.js"></script>
 </head>
 <body>
     <header>
@@ -65,7 +66,7 @@
     <div class="clear"></div>
 </main>
 <!-- Todo lo que se incluye dentro del CV es una mezcla de material personal y material obtenido de la página https://randomuser.me/ -->
-<div id="clock"></div>
+<div id="clock">
   <script>
     function displayTime() {
       let date = new Date();
@@ -74,6 +75,7 @@
     }
     setInterval(displayTime, 1000);
   </script>
+</div>
 <footer>
     <div>
         <h4>Copyright Todos los derechos reservados</h4>
