--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@
     <div class="clear"></div>
 </main>
 <!-- Todo lo que se incluye dentro del CV es una mezcla de material personal y material obtenido de la página https://randomuser.me/ -->
-<div id="clock">
+<div id="clock"></div>
+	<body>
+  <div id="clock"></div>
+  <script src="JS/nombre.js"></script>
   <script>
-    function displayTime() {
-      let date = new Date();
-      let time = date.toLocaleTimeString();
-      document.getElementById("HORA").innerHTML = time;
-    }
     setInterval(displayTime, 1000);
   </script>
-</div>
+</body>
+
 <footer>
     <div>
         <h4>Copyright Todos los derechos reservados</h4>
