--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="The viking gang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="JS/nombre.js"></script>
+	<script>setInterval(displayTime, 1000);</script>
 </head>
 <body>
     <header>
@@ -66,15 +67,7 @@
     <div class="clear"></div>
 </main>
 <!-- Todo lo que se incluye dentro del CV es una mezcla de material personal y material obtenido de la página https://randomuser.me/ -->
-<div id="clock"></div>
-	<body>
-  <div id="clock"></div>
-  <script src="JS/nombre.js"></script>
-  <script>
-    setInterval(displayTime, 1000);
-  </script>
-</body>
-
+  <div id="clock"></div> <br>
 <footer>
     <div>
         <h4>Copyright Todos los derechos reservados</h4>
