--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <meta name="description" content="the viiking gang presents its cv with its best pictures">
     <meta name="author" content="The viking gang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="JS/nombre.js"></script>
 	<script>setInterval(displayTime, 1000);</script>
+	<script src="JS/nombre.js"></script>
 </head>
 <body>
     <header>
-        <header>
             <div class="title-container">
               <p class="titulo">CV de Erika</p>
             </div>
@@ -27,7 +26,6 @@
                 <li><a href="Contacto.html">Consulta</a></li>
               </ul>
             </nav>
-          </header>          
     </header>
     <main>
         <article>
@@ -41,7 +39,7 @@
                  <p style="text-align: left;">El cubismo es un movimiento vanguardista de inicios del siglo XX que se caracteriza por el uso dominante de figuras geométricas como los rectángulos, los triángulos y, especialmente, los cubos, de donde toma su nombre. Su objetivo es romper con la representación naturalista y plasmar varios planos de modo simultáneo sobre la superficie de un cuadro.</p>
 		        <h3>¿Son mis gatos realmente cubistas?</h3>
                 <p style="text-align: left;">Posiblemente, no. Al menos, no desde el punto de vista meramente académico. Pero sí que tienen una gran influencia del cubismo y una búsqueda del trabajo sobre los planos y la geometría.</p><br>
-            </section><wbr>
+            </section>
             <div></div>
             <section>
             <h2>Temáticas fundamentales de mis obras</h2>
@@ -50,7 +48,7 @@
                 Los gatos fueron la primer temática desarrollada. Pensé que esos animales siempre se representan de modo muy figurativo. Y también, a veces, exaltando la suavidad de las líneas, un tanto cursi. Pensé que encontrar las formas geométricas fundamentales, les daría mayor carácter. Podría resaltar las líneas de fuerza y las diferencias entre las distinas razas.             </p>
             <h3>Los dinosaurios</h3>
             <p>
-                Los dinosaurios, a diferencia de los gatos, tienen líneas de fuerza muy marcadas. Quizá hayan sido así originalmente o fueron representados de esa manera en las reconstrucciones paleontológicas. Pero, hay que reconocer, tienen líneas geométricas naturales. Allí el desafío estaba en elegir el colorido o, también, en trabajar con los planos. Esta definici´n de planos, es otra característica del cubismo.              </p>
+                Los dinosaurios, a diferencia de los gatos, tienen líneas de fuerza muy marcadas. Quizá hayan sido así originalmente o fueron representados de esa manera en las reconstrucciones paleontológicas. Pero, hay que reconocer, tienen líneas geométricas naturales. Allí el desafío estaba en elegir el colorido o, también, en trabajar con los planos. Esta definición de planos, es otra característica del cubismo.              </p>
             </section>
         </article>
     <aside>
