--- a/index.html
+++ b/index.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
-<html lang="en-US">  
+<html lang="en-US">
 <head>
     <title>TVG</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" type="image/x-icon" href="fav.png">
-    <meta name="description" content="the viiking gang presents its cv with its best pictures">
-    <meta name="author" content="The viking gang">
+    <meta name="description" content="The Viking Gang presents its CV with its best pictures">
+    <meta name="author" content="The Viking Gang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script>setInterval(displayTime, 1000);</script>
-	<script src="JS/nombre.js"></script>
+    <script src="JS/nombre.js"></script>
+    <script>
+        function displayTime() {
+            var date = new Date();
+            var time = date.toLocaleTimeString();
+            document.getElementById("time").innerHTML = time;
+        }
+        setInterval(displayTime, 1000);
+    </script>
 </head>
 <body>
-    <header>
-            <div class="title-container">
-              <p class="titulo">CV de Erika</p>
-            </div>
-            <div class="img-container">
-              <img src="Imagen header.jpg" alt="Imagen del sitio">
-            </div>
-            <nav>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Imágenes.html">Imágenes</a></li>
-                <li><a href="Contacto.html">Consulta</a></li>
-              </ul>
-            </nav>
-    </header>
-    <main>
-        <article>
-            <h1>Soy la creadora de TVG y los animales cubistas</h1>
-            <section>
-	        <h2>¿Cómo creo los animales cubistas?</h2>
-		        <p style="text-align: left;">Los <strong>gatos cubistas</strong> fueron la evolución natural de mi afición al dibujo. Incialmente, dibujaba caballos. Preferentemente bocetos de caballos basados en las líneas de fuerza. Luego, tuve un gato. Entonces, quise dibujarlos. No me gustaba representarlos de modo realista, por lo que intenté hacerlo con líneas geométricas</p><br>
-	        <h2>Por qué los incluyo dentro del cubismo</h2>
-		        <p style="text-align: left;">Mi padre era pintor y profesor de pintura y dibujo en la Universidad. El se adscribía en líneas generales dentro del cubismo. Me pareció que era un homenaje a él dibujar y pintar los gatos en esa línea artística</p>
-		        <h3>¿Qué es el cubismo? </h3>
-                 <p style="text-align: left;">El cubismo es un movimiento vanguardista de inicios del siglo XX que se caracteriza por el uso dominante de figuras geométricas como los rectángulos, los triángulos y, especialmente, los cubos, de donde toma su nombre. Su objetivo es romper con la representación naturalista y plasmar varios planos de modo simultáneo sobre la superficie de un cuadro.</p>
-		        <h3>¿Son mis gatos realmente cubistas?</h3>
-                <p style="text-align: left;">Posiblemente, no. Al menos, no desde el punto de vista meramente académico. Pero sí que tienen una gran influencia del cubismo y una búsqueda del trabajo sobre los planos y la geometría.</p><br>
-            </section>
+<header>
+    <div class="title-container">
+        <p class="titulo">CV de Erika</p>
+    </div>
+    <div class="img-container">
+        <img src="Imagen%20header.jpg" alt="Imagen del sitio">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Imágenes.html">Imágenes</a></li>
+            <li><a href="Contacto.html">Consulta</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <article>
+        <h1>Soy la creadora de TVG y los animales cubistas</h1>
+        <section>
+            <h2>¿Cómo creo los animales cubistas?</h2>
+            <p>Los <strong>gatos cubistas</strong> fueron la evolución natural de mi afición al dibujo. Inicialmente, dibujaba caballos. Preferentemente bocetos de caballos basados en las líneas de fuerza. Luego, tuve un gato. Entonces, quise dibujarlos. No me gustaba representarlos de modo realista, por lo que intenté hacerlo con líneas geométricas.</p>
+            <h2>¿Por qué los incluyo dentro del cubismo?</h2>
+            <p>Mi padre era pintor y profesor de pintura y dibujo en la universidad. Él se adscribía, en líneas generales, dentro del cubismo. Me pareció que era un homenaje a él dibujar y pintar los gatos en esa línea artística.</p>
+            <h3>¿Qué es el cubismo?</h3>
+            <p>El cubismo es un movimiento vanguardista de inicios del siglo XX que se caracteriza por el uso dominante de figuras geométricas como los rectángulos, los triángulos y, especialmente, los cubos, de donde toma su nombre. Su objetivo es romper con la representación naturalista y plasmar varios planos de modo simultáneo sobre la superficie de un cuadro.</p>
+            <h3>¿Son mis gatos realmente cubistas?</h3>
+            <p>Posiblemente no. Al menos, no desde el punto de vista meramente académico. Pero sí que tienen una gran influencia del cubismo y una búsqueda del trabajo sobre los planos y la geometría.</p>
+        </section>
+        <section>
             <div></div>
-            <section>
             <h2>Temáticas fundamentales de mis obras</h2>
             <h3>Los gatos</h3>
             <p>
@@ -49,8 +56,8 @@
             <h3>Los dinosaurios</h3>
             <p>
                 Los dinosaurios, a diferencia de los gatos, tienen líneas de fuerza muy marcadas. Quizá hayan sido así originalmente o fueron representados de esa manera en las reconstrucciones paleontológicas. Pero, hay que reconocer, tienen líneas geométricas naturales. Allí el desafío estaba en elegir el colorido o, también, en trabajar con los planos. Esta definición de planos, es otra característica del cubismo.              </p>
-            </section>
-        </article>
+        </section>
+     </article>
     <aside>
         <h2>Hola, soy Erika, creadora de TVG</h2>
             <img src="https://randomuser.me/api/portraits/women/40.jpg">
