--- a/imagenes.html
+++ b/imagenes.html
@@ -40,7 +40,7 @@
         </audio><br>
     <h2>Cómo suena un dinosaurio</h2>
     <audio controls>
-        <source src="Dinosaurio.mp3" type="audio/mp3">
+        <source src="Dinosaurio.ogg" type="audio/ogg">
         No audio support.
     </audio> 
 </section>
