--- a/Contacto.html
+++ b/Contacto.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Imágenes.html">Imágenes</a></li>
-                <li><a href="Contacto.html">Consulta</a></li>
+                <li><a href="imagenes.html">Imágenes</a></li>
+                <li><a href="contacto.html">Consulta</a></li>
             </ul>
         </nav>
     </header>
