--- a/imagenes.html
+++ b/imagenes.html
@@ -35,12 +35,12 @@
     <section>
         <h2>Cómo suena un gato</h2>
         <audio controls>
-            <source src="Gato.ogg" type="audio/ogg">
+            <source src="Gato.mp3" type="audio/mp3">
             No audio support.
         </audio><br>
     <h2>Cómo suena un dinosaurio</h2>
     <audio controls>
-        <source src="Dinosaurio.ogg" type="audio/ogg">
+        <source src="Dinosaurio.mp3" type="audio/mp3">
         No audio support.
     </audio> 
 </section>
