--- a/imagenes.html
+++ b/imagenes.html
@@ -28,7 +28,7 @@
     <section>
         <h2>Cómo me inspiro para dibujar</h2>
         <video width="200" height="150" controls preload>
-            <source src="https://github.com/cecith/TVG-/blob/bbd6fe9c65171a7f064674c2e51d79a798beebb7/Los%20ruidos%20del%20mar.mp4" type="video/mp4">
+            <source src="Los ruidos del mar.mov" type="video/mov">
             No video support.
         </video>
     </section>
