--- a/imagenes.html
+++ b/imagenes.html
@@ -25,13 +25,15 @@
         <img src="Imagen 3.webp" alt="Imagen 3">
         <img src="Imagen 4.webp" alt="Imagen 4">
     </div>   
-    <section>
-        <h2>Cómo me inspiro para dibujar</h2>
-        <video width="200" height="150" controls preload>
-            <source src="Los ruidos del mar.mov" type="video/mov">
-            No video support.
-        </video>
-    </section>
+ <section>
+    <h2>Cómo me inspiro para dibujar</h2>
+    <video width="640" height="360" controls preload>
+        <source src="Los ruidos del mar.mp4" type="video/mp4">
+        <source src="Los ruidos del mar.webm" type="video/webm">
+        <source src="Los ruidos del mar.ogv" type="video/ogg">
+        No video support.
+    </video>
+</section>
     <section>
         <h2>Cómo suena un gato</h2>
         <audio controls>
