--- a/imagenes.html
+++ b/imagenes.html
@@ -27,7 +27,7 @@
     </div>   
  <section>
     <h2>Cómo me inspiro para dibujar</h2>
-    <video width="640" height="360" controls preload>
+    <video width="640" height="360" controls>
         <source src="Los ruidos del mar.mp4" type="video/mp4">
         <source src="Los ruidos del mar.webm" type="video/webm">
         <source src="Los ruidos del mar.ogv" type="video/ogg">
